part1 syntax errors/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration program
Rule 2     program -> definition program
Rule 3     program -> declaration
Rule 4     program -> definition
Rule 5     declaration -> DECL VARIABLE LPAREN arguments RPAREN type
Rule 6     declaration -> DECL VARIABLE LPAREN RPAREN type
Rule 7     definition -> DEF VARIABLE LPAREN arguments RPAREN type block
Rule 8     definition -> DEF VARIABLE LPAREN RPAREN type block
Rule 9     type -> COLON TYPE_INT
Rule 10    type -> COLON TYPE_FLOAT
Rule 11    type -> COLON TYPE_VOID
Rule 12    type -> COLON TYPE_STRING
Rule 13    type -> COLON TYPE_BOOLEAN
Rule 14    empty -> <empty>
Rule 15    arguments -> VARIABLE type
Rule 16    arguments -> VARIABLE type COMMA arguments
Rule 17    arguments_funinvocation -> expression
Rule 18    arguments_funinvocation -> expression COMMA arguments_funinvocation
Rule 19    statment_repeat -> empty
Rule 20    statment_repeat -> statment statment_repeat
Rule 21    block -> LBRACE statment_repeat RBRACE
Rule 22    statment -> return
Rule 23    statment -> statment_expression
Rule 24    statment -> if
Rule 25    statment -> while
Rule 26    statment -> var_decl
Rule 27    statment -> var_assign
Rule 28    return -> RETURN SEMICOLON
Rule 29    return -> RETURN expression SEMICOLON
Rule 30    statment_expression -> expression SEMICOLON
Rule 31    if -> IF expression block else
Rule 32    else -> empty
Rule 33    else -> ELSE block
Rule 34    while -> WHILE expression block
Rule 35    var_decl -> VARIABLE type EQUALS expression SEMICOLON
Rule 36    var_assign -> VARIABLE EQUALS expression SEMICOLON
Rule 37    expression -> expression PLUS expression
Rule 38    expression -> expression MINUS expression
Rule 39    expression -> expression TIMES expression
Rule 40    expression -> expression DIVIDE expression
Rule 41    expression -> expression MOD expression
Rule 42    expression -> expression AND expression
Rule 43    expression -> expression OR expression
Rule 44    expression -> expression EQUALS_EQUALS expression
Rule 45    expression -> expression NOT_EQUALS expression
Rule 46    expression -> expression GREATER expression
Rule 47    expression -> expression LESS expression
Rule 48    expression -> expression GREATER_EQUAL expression
Rule 49    expression -> expression LESS_EQUAL expression
Rule 50    expression -> MINUS expression
Rule 51    expression -> LPAREN expression RPAREN
Rule 52    expression -> FLOAT
Rule 53    expression -> INT
Rule 54    expression -> STRING
Rule 55    expression -> VARIABLE
Rule 56    expression -> TRUE
Rule 57    expression -> FALSE
Rule 58    expression -> NOT_UNARY expression
Rule 59    expression -> VARIABLE LBRACKET expression RBRACKET
Rule 60    expression -> GETARRAY LBRACKET expression RBRACKET
Rule 61    expression -> VARIABLE LPAREN arguments_funinvocation RPAREN
Rule 62    expression -> VARIABLE LPAREN RPAREN

Terminals, with rules where they appear

AND                  : 42
COLON                : 9 10 11 12 13
COMMA                : 16 18
DECL                 : 5 6
DEF                  : 7 8
DIVIDE               : 40
ELSE                 : 33
EQUALS               : 35 36
EQUALS_EQUALS        : 44
FALSE                : 57
FLOAT                : 52
GETARRAY             : 60
GREATER              : 46
GREATER_EQUAL        : 48
IF                   : 31
INT                  : 53
LBRACE               : 21
LBRACKET             : 59 60
LESS                 : 47
LESS_EQUAL           : 49
LPAREN               : 5 6 7 8 51 61 62
MINUS                : 38 50
MOD                  : 41
NOT_EQUALS           : 45
NOT_UNARY            : 58
OR                   : 43
PLUS                 : 37
RBRACE               : 21
RBRACKET             : 59 60
RETURN               : 28 29
RPAREN               : 5 6 7 8 51 61 62
SEMICOLON            : 28 29 30 35 36
STRING               : 54
TIMES                : 39
TRUE                 : 56
TYPE_BOOLEAN         : 13
TYPE_FLOAT           : 10
TYPE_INT             : 9
TYPE_STRING          : 12
TYPE_VOID            : 11
VARIABLE             : 5 6 7 8 15 16 35 36 55 59 61 62
WHILE                : 34
error                : 

Nonterminals, with rules where they appear

arguments            : 5 7 16
arguments_funinvocation : 18 61
block                : 7 8 31 33 34
declaration          : 1 3
definition           : 2 4
else                 : 31
empty                : 19 32
expression           : 17 18 29 30 31 34 35 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 51 58 59 60
if                   : 24
program              : 1 2 0
return               : 22
statment             : 20
statment_expression  : 23
statment_repeat      : 20 21
type                 : 5 6 7 8 15 16 35
var_assign           : 27
var_decl             : 26
while                : 25

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration program
    (2) program -> . definition program
    (3) program -> . declaration
    (4) program -> . definition
    (5) declaration -> . DECL VARIABLE LPAREN arguments RPAREN type
    (6) declaration -> . DECL VARIABLE LPAREN RPAREN type
    (7) definition -> . DEF VARIABLE LPAREN arguments RPAREN type block
    (8) definition -> . DEF VARIABLE LPAREN RPAREN type block

    DECL            shift and go to state 4
    DEF             shift and go to state 5

    program                        shift and go to state 1
    declaration                    shift and go to state 2
    definition                     shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration . program
    (3) program -> declaration .
    (1) program -> . declaration program
    (2) program -> . definition program
    (3) program -> . declaration
    (4) program -> . definition
    (5) declaration -> . DECL VARIABLE LPAREN arguments RPAREN type
    (6) declaration -> . DECL VARIABLE LPAREN RPAREN type
    (7) definition -> . DEF VARIABLE LPAREN arguments RPAREN type block
    (8) definition -> . DEF VARIABLE LPAREN RPAREN type block

    $end            reduce using rule 3 (program -> declaration .)
    DECL            shift and go to state 4
    DEF             shift and go to state 5

    declaration                    shift and go to state 2
    program                        shift and go to state 6
    definition                     shift and go to state 3

state 3

    (2) program -> definition . program
    (4) program -> definition .
    (1) program -> . declaration program
    (2) program -> . definition program
    (3) program -> . declaration
    (4) program -> . definition
    (5) declaration -> . DECL VARIABLE LPAREN arguments RPAREN type
    (6) declaration -> . DECL VARIABLE LPAREN RPAREN type
    (7) definition -> . DEF VARIABLE LPAREN arguments RPAREN type block
    (8) definition -> . DEF VARIABLE LPAREN RPAREN type block

    $end            reduce using rule 4 (program -> definition .)
    DECL            shift and go to state 4
    DEF             shift and go to state 5

    definition                     shift and go to state 3
    program                        shift and go to state 7
    declaration                    shift and go to state 2

state 4

    (5) declaration -> DECL . VARIABLE LPAREN arguments RPAREN type
    (6) declaration -> DECL . VARIABLE LPAREN RPAREN type

    VARIABLE        shift and go to state 8


state 5

    (7) definition -> DEF . VARIABLE LPAREN arguments RPAREN type block
    (8) definition -> DEF . VARIABLE LPAREN RPAREN type block

    VARIABLE        shift and go to state 9


state 6

    (1) program -> declaration program .

    $end            reduce using rule 1 (program -> declaration program .)


state 7

    (2) program -> definition program .

    $end            reduce using rule 2 (program -> definition program .)


state 8

    (5) declaration -> DECL VARIABLE . LPAREN arguments RPAREN type
    (6) declaration -> DECL VARIABLE . LPAREN RPAREN type

    LPAREN          shift and go to state 10


state 9

    (7) definition -> DEF VARIABLE . LPAREN arguments RPAREN type block
    (8) definition -> DEF VARIABLE . LPAREN RPAREN type block

    LPAREN          shift and go to state 11


state 10

    (5) declaration -> DECL VARIABLE LPAREN . arguments RPAREN type
    (6) declaration -> DECL VARIABLE LPAREN . RPAREN type
    (15) arguments -> . VARIABLE type
    (16) arguments -> . VARIABLE type COMMA arguments

    RPAREN          shift and go to state 14
    VARIABLE        shift and go to state 12

    arguments                      shift and go to state 13

state 11

    (7) definition -> DEF VARIABLE LPAREN . arguments RPAREN type block
    (8) definition -> DEF VARIABLE LPAREN . RPAREN type block
    (15) arguments -> . VARIABLE type
    (16) arguments -> . VARIABLE type COMMA arguments

    RPAREN          shift and go to state 16
    VARIABLE        shift and go to state 12

    arguments                      shift and go to state 15

state 12

    (15) arguments -> VARIABLE . type
    (16) arguments -> VARIABLE . type COMMA arguments
    (9) type -> . COLON TYPE_INT
    (10) type -> . COLON TYPE_FLOAT
    (11) type -> . COLON TYPE_VOID
    (12) type -> . COLON TYPE_STRING
    (13) type -> . COLON TYPE_BOOLEAN

    COLON           shift and go to state 18

    type                           shift and go to state 17

state 13

    (5) declaration -> DECL VARIABLE LPAREN arguments . RPAREN type

    RPAREN          shift and go to state 19


state 14

    (6) declaration -> DECL VARIABLE LPAREN RPAREN . type
    (9) type -> . COLON TYPE_INT
    (10) type -> . COLON TYPE_FLOAT
    (11) type -> . COLON TYPE_VOID
    (12) type -> . COLON TYPE_STRING
    (13) type -> . COLON TYPE_BOOLEAN

    COLON           shift and go to state 18

    type                           shift and go to state 20

state 15

    (7) definition -> DEF VARIABLE LPAREN arguments . RPAREN type block

    RPAREN          shift and go to state 21


state 16

    (8) definition -> DEF VARIABLE LPAREN RPAREN . type block
    (9) type -> . COLON TYPE_INT
    (10) type -> . COLON TYPE_FLOAT
    (11) type -> . COLON TYPE_VOID
    (12) type -> . COLON TYPE_STRING
    (13) type -> . COLON TYPE_BOOLEAN

    COLON           shift and go to state 18

    type                           shift and go to state 22

state 17

    (15) arguments -> VARIABLE type .
    (16) arguments -> VARIABLE type . COMMA arguments

    RPAREN          reduce using rule 15 (arguments -> VARIABLE type .)
    COMMA           shift and go to state 23


state 18

    (9) type -> COLON . TYPE_INT
    (10) type -> COLON . TYPE_FLOAT
    (11) type -> COLON . TYPE_VOID
    (12) type -> COLON . TYPE_STRING
    (13) type -> COLON . TYPE_BOOLEAN

    TYPE_INT        shift and go to state 24
    TYPE_FLOAT      shift and go to state 25
    TYPE_VOID       shift and go to state 26
    TYPE_STRING     shift and go to state 27
    TYPE_BOOLEAN    shift and go to state 28


state 19

    (5) declaration -> DECL VARIABLE LPAREN arguments RPAREN . type
    (9) type -> . COLON TYPE_INT
    (10) type -> . COLON TYPE_FLOAT
    (11) type -> . COLON TYPE_VOID
    (12) type -> . COLON TYPE_STRING
    (13) type -> . COLON TYPE_BOOLEAN

    COLON           shift and go to state 18

    type                           shift and go to state 29

state 20

    (6) declaration -> DECL VARIABLE LPAREN RPAREN type .

    DECL            reduce using rule 6 (declaration -> DECL VARIABLE LPAREN RPAREN type .)
    DEF             reduce using rule 6 (declaration -> DECL VARIABLE LPAREN RPAREN type .)
    $end            reduce using rule 6 (declaration -> DECL VARIABLE LPAREN RPAREN type .)


state 21

    (7) definition -> DEF VARIABLE LPAREN arguments RPAREN . type block
    (9) type -> . COLON TYPE_INT
    (10) type -> . COLON TYPE_FLOAT
    (11) type -> . COLON TYPE_VOID
    (12) type -> . COLON TYPE_STRING
    (13) type -> . COLON TYPE_BOOLEAN

    COLON           shift and go to state 18

    type                           shift and go to state 30

state 22

    (8) definition -> DEF VARIABLE LPAREN RPAREN type . block
    (21) block -> . LBRACE statment_repeat RBRACE

    LBRACE          shift and go to state 32

    block                          shift and go to state 31

state 23

    (16) arguments -> VARIABLE type COMMA . arguments
    (15) arguments -> . VARIABLE type
    (16) arguments -> . VARIABLE type COMMA arguments

    VARIABLE        shift and go to state 12

    arguments                      shift and go to state 33

state 24

    (9) type -> COLON TYPE_INT .

    COMMA           reduce using rule 9 (type -> COLON TYPE_INT .)
    RPAREN          reduce using rule 9 (type -> COLON TYPE_INT .)
    DECL            reduce using rule 9 (type -> COLON TYPE_INT .)
    DEF             reduce using rule 9 (type -> COLON TYPE_INT .)
    $end            reduce using rule 9 (type -> COLON TYPE_INT .)
    LBRACE          reduce using rule 9 (type -> COLON TYPE_INT .)
    EQUALS          reduce using rule 9 (type -> COLON TYPE_INT .)


state 25

    (10) type -> COLON TYPE_FLOAT .

    COMMA           reduce using rule 10 (type -> COLON TYPE_FLOAT .)
    RPAREN          reduce using rule 10 (type -> COLON TYPE_FLOAT .)
    DECL            reduce using rule 10 (type -> COLON TYPE_FLOAT .)
    DEF             reduce using rule 10 (type -> COLON TYPE_FLOAT .)
    $end            reduce using rule 10 (type -> COLON TYPE_FLOAT .)
    LBRACE          reduce using rule 10 (type -> COLON TYPE_FLOAT .)
    EQUALS          reduce using rule 10 (type -> COLON TYPE_FLOAT .)


state 26

    (11) type -> COLON TYPE_VOID .

    COMMA           reduce using rule 11 (type -> COLON TYPE_VOID .)
    RPAREN          reduce using rule 11 (type -> COLON TYPE_VOID .)
    DECL            reduce using rule 11 (type -> COLON TYPE_VOID .)
    DEF             reduce using rule 11 (type -> COLON TYPE_VOID .)
    $end            reduce using rule 11 (type -> COLON TYPE_VOID .)
    LBRACE          reduce using rule 11 (type -> COLON TYPE_VOID .)
    EQUALS          reduce using rule 11 (type -> COLON TYPE_VOID .)


state 27

    (12) type -> COLON TYPE_STRING .

    COMMA           reduce using rule 12 (type -> COLON TYPE_STRING .)
    RPAREN          reduce using rule 12 (type -> COLON TYPE_STRING .)
    DECL            reduce using rule 12 (type -> COLON TYPE_STRING .)
    DEF             reduce using rule 12 (type -> COLON TYPE_STRING .)
    $end            reduce using rule 12 (type -> COLON TYPE_STRING .)
    LBRACE          reduce using rule 12 (type -> COLON TYPE_STRING .)
    EQUALS          reduce using rule 12 (type -> COLON TYPE_STRING .)


state 28

    (13) type -> COLON TYPE_BOOLEAN .

    COMMA           reduce using rule 13 (type -> COLON TYPE_BOOLEAN .)
    RPAREN          reduce using rule 13 (type -> COLON TYPE_BOOLEAN .)
    DECL            reduce using rule 13 (type -> COLON TYPE_BOOLEAN .)
    DEF             reduce using rule 13 (type -> COLON TYPE_BOOLEAN .)
    $end            reduce using rule 13 (type -> COLON TYPE_BOOLEAN .)
    LBRACE          reduce using rule 13 (type -> COLON TYPE_BOOLEAN .)
    EQUALS          reduce using rule 13 (type -> COLON TYPE_BOOLEAN .)


state 29

    (5) declaration -> DECL VARIABLE LPAREN arguments RPAREN type .

    DECL            reduce using rule 5 (declaration -> DECL VARIABLE LPAREN arguments RPAREN type .)
    DEF             reduce using rule 5 (declaration -> DECL VARIABLE LPAREN arguments RPAREN type .)
    $end            reduce using rule 5 (declaration -> DECL VARIABLE LPAREN arguments RPAREN type .)


state 30

    (7) definition -> DEF VARIABLE LPAREN arguments RPAREN type . block
    (21) block -> . LBRACE statment_repeat RBRACE

    LBRACE          shift and go to state 32

    block                          shift and go to state 34

state 31

    (8) definition -> DEF VARIABLE LPAREN RPAREN type block .

    DECL            reduce using rule 8 (definition -> DEF VARIABLE LPAREN RPAREN type block .)
    DEF             reduce using rule 8 (definition -> DEF VARIABLE LPAREN RPAREN type block .)
    $end            reduce using rule 8 (definition -> DEF VARIABLE LPAREN RPAREN type block .)


state 32

    (21) block -> LBRACE . statment_repeat RBRACE
    (19) statment_repeat -> . empty
    (20) statment_repeat -> . statment statment_repeat
    (14) empty -> .
    (22) statment -> . return
    (23) statment -> . statment_expression
    (24) statment -> . if
    (25) statment -> . while
    (26) statment -> . var_decl
    (27) statment -> . var_assign
    (28) return -> . RETURN SEMICOLON
    (29) return -> . RETURN expression SEMICOLON
    (30) statment_expression -> . expression SEMICOLON
    (31) if -> . IF expression block else
    (34) while -> . WHILE expression block
    (35) var_decl -> . VARIABLE type EQUALS expression SEMICOLON
    (36) var_assign -> . VARIABLE EQUALS expression SEMICOLON
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression TIMES expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . expression MOD expression
    (42) expression -> . expression AND expression
    (43) expression -> . expression OR expression
    (44) expression -> . expression EQUALS_EQUALS expression
    (45) expression -> . expression NOT_EQUALS expression
    (46) expression -> . expression GREATER expression
    (47) expression -> . expression LESS expression
    (48) expression -> . expression GREATER_EQUAL expression
    (49) expression -> . expression LESS_EQUAL expression
    (50) expression -> . MINUS expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . FLOAT
    (53) expression -> . INT
    (54) expression -> . STRING
    (55) expression -> . VARIABLE
    (56) expression -> . TRUE
    (57) expression -> . FALSE
    (58) expression -> . NOT_UNARY expression
    (59) expression -> . VARIABLE LBRACKET expression RBRACKET
    (60) expression -> . GETARRAY LBRACKET expression RBRACKET
    (61) expression -> . VARIABLE LPAREN arguments_funinvocation RPAREN
    (62) expression -> . VARIABLE LPAREN RPAREN

    RBRACE          reduce using rule 14 (empty -> .)
    RETURN          shift and go to state 44
    IF              shift and go to state 46
    WHILE           shift and go to state 47
    VARIABLE        shift and go to state 48
    MINUS           shift and go to state 49
    LPAREN          shift and go to state 50
    FLOAT           shift and go to state 51
    INT             shift and go to state 52
    STRING          shift and go to state 53
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55
    NOT_UNARY       shift and go to state 56
    GETARRAY        shift and go to state 57

    statment_repeat                shift and go to state 35
    empty                          shift and go to state 36
    statment                       shift and go to state 37
    return                         shift and go to state 38
    statment_expression            shift and go to state 39
    if                             shift and go to state 40
    while                          shift and go to state 41
    var_decl                       shift and go to state 42
    var_assign                     shift and go to state 43
    expression                     shift and go to state 45

state 33

    (16) arguments -> VARIABLE type COMMA arguments .

    RPAREN          reduce using rule 16 (arguments -> VARIABLE type COMMA arguments .)


state 34

    (7) definition -> DEF VARIABLE LPAREN arguments RPAREN type block .

    DECL            reduce using rule 7 (definition -> DEF VARIABLE LPAREN arguments RPAREN type block .)
    DEF             reduce using rule 7 (definition -> DEF VARIABLE LPAREN arguments RPAREN type block .)
    $end            reduce using rule 7 (definition -> DEF VARIABLE LPAREN arguments RPAREN type block .)


state 35

    (21) block -> LBRACE statment_repeat . RBRACE

    RBRACE          shift and go to state 58


state 36

    (19) statment_repeat -> empty .

    RBRACE          reduce using rule 19 (statment_repeat -> empty .)


state 37

    (20) statment_repeat -> statment . statment_repeat
    (19) statment_repeat -> . empty
    (20) statment_repeat -> . statment statment_repeat
    (14) empty -> .
    (22) statment -> . return
    (23) statment -> . statment_expression
    (24) statment -> . if
    (25) statment -> . while
    (26) statment -> . var_decl
    (27) statment -> . var_assign
    (28) return -> . RETURN SEMICOLON
    (29) return -> . RETURN expression SEMICOLON
    (30) statment_expression -> . expression SEMICOLON
    (31) if -> . IF expression block else
    (34) while -> . WHILE expression block
    (35) var_decl -> . VARIABLE type EQUALS expression SEMICOLON
    (36) var_assign -> . VARIABLE EQUALS expression SEMICOLON
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression TIMES expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . expression MOD expression
    (42) expression -> . expression AND expression
    (43) expression -> . expression OR expression
    (44) expression -> . expression EQUALS_EQUALS expression
    (45) expression -> . expression NOT_EQUALS expression
    (46) expression -> . expression GREATER expression
    (47) expression -> . expression LESS expression
    (48) expression -> . expression GREATER_EQUAL expression
    (49) expression -> . expression LESS_EQUAL expression
    (50) expression -> . MINUS expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . FLOAT
    (53) expression -> . INT
    (54) expression -> . STRING
    (55) expression -> . VARIABLE
    (56) expression -> . TRUE
    (57) expression -> . FALSE
    (58) expression -> . NOT_UNARY expression
    (59) expression -> . VARIABLE LBRACKET expression RBRACKET
    (60) expression -> . GETARRAY LBRACKET expression RBRACKET
    (61) expression -> . VARIABLE LPAREN arguments_funinvocation RPAREN
    (62) expression -> . VARIABLE LPAREN RPAREN

    RBRACE          reduce using rule 14 (empty -> .)
    RETURN          shift and go to state 44
    IF              shift and go to state 46
    WHILE           shift and go to state 47
    VARIABLE        shift and go to state 48
    MINUS           shift and go to state 49
    LPAREN          shift and go to state 50
    FLOAT           shift and go to state 51
    INT             shift and go to state 52
    STRING          shift and go to state 53
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55
    NOT_UNARY       shift and go to state 56
    GETARRAY        shift and go to state 57

    statment                       shift and go to state 37
    statment_repeat                shift and go to state 59
    empty                          shift and go to state 36
    return                         shift and go to state 38
    statment_expression            shift and go to state 39
    if                             shift and go to state 40
    while                          shift and go to state 41
    var_decl                       shift and go to state 42
    var_assign                     shift and go to state 43
    expression                     shift and go to state 45

state 38

    (22) statment -> return .

    RETURN          reduce using rule 22 (statment -> return .)
    IF              reduce using rule 22 (statment -> return .)
    WHILE           reduce using rule 22 (statment -> return .)
    VARIABLE        reduce using rule 22 (statment -> return .)
    MINUS           reduce using rule 22 (statment -> return .)
    LPAREN          reduce using rule 22 (statment -> return .)
    FLOAT           reduce using rule 22 (statment -> return .)
    INT             reduce using rule 22 (statment -> return .)
    STRING          reduce using rule 22 (statment -> return .)
    TRUE            reduce using rule 22 (statment -> return .)
    FALSE           reduce using rule 22 (statment -> return .)
    NOT_UNARY       reduce using rule 22 (statment -> return .)
    GETARRAY        reduce using rule 22 (statment -> return .)
    RBRACE          reduce using rule 22 (statment -> return .)


state 39

    (23) statment -> statment_expression .

    RETURN          reduce using rule 23 (statment -> statment_expression .)
    IF              reduce using rule 23 (statment -> statment_expression .)
    WHILE           reduce using rule 23 (statment -> statment_expression .)
    VARIABLE        reduce using rule 23 (statment -> statment_expression .)
    MINUS           reduce using rule 23 (statment -> statment_expression .)
    LPAREN          reduce using rule 23 (statment -> statment_expression .)
    FLOAT           reduce using rule 23 (statment -> statment_expression .)
    INT             reduce using rule 23 (statment -> statment_expression .)
    STRING          reduce using rule 23 (statment -> statment_expression .)
    TRUE            reduce using rule 23 (statment -> statment_expression .)
    FALSE           reduce using rule 23 (statment -> statment_expression .)
    NOT_UNARY       reduce using rule 23 (statment -> statment_expression .)
    GETARRAY        reduce using rule 23 (statment -> statment_expression .)
    RBRACE          reduce using rule 23 (statment -> statment_expression .)


state 40

    (24) statment -> if .

    RETURN          reduce using rule 24 (statment -> if .)
    IF              reduce using rule 24 (statment -> if .)
    WHILE           reduce using rule 24 (statment -> if .)
    VARIABLE        reduce using rule 24 (statment -> if .)
    MINUS           reduce using rule 24 (statment -> if .)
    LPAREN          reduce using rule 24 (statment -> if .)
    FLOAT           reduce using rule 24 (statment -> if .)
    INT             reduce using rule 24 (statment -> if .)
    STRING          reduce using rule 24 (statment -> if .)
    TRUE            reduce using rule 24 (statment -> if .)
    FALSE           reduce using rule 24 (statment -> if .)
    NOT_UNARY       reduce using rule 24 (statment -> if .)
    GETARRAY        reduce using rule 24 (statment -> if .)
    RBRACE          reduce using rule 24 (statment -> if .)


state 41

    (25) statment -> while .

    RETURN          reduce using rule 25 (statment -> while .)
    IF              reduce using rule 25 (statment -> while .)
    WHILE           reduce using rule 25 (statment -> while .)
    VARIABLE        reduce using rule 25 (statment -> while .)
    MINUS           reduce using rule 25 (statment -> while .)
    LPAREN          reduce using rule 25 (statment -> while .)
    FLOAT           reduce using rule 25 (statment -> while .)
    INT             reduce using rule 25 (statment -> while .)
    STRING          reduce using rule 25 (statment -> while .)
    TRUE            reduce using rule 25 (statment -> while .)
    FALSE           reduce using rule 25 (statment -> while .)
    NOT_UNARY       reduce using rule 25 (statment -> while .)
    GETARRAY        reduce using rule 25 (statment -> while .)
    RBRACE          reduce using rule 25 (statment -> while .)


state 42

    (26) statment -> var_decl .

    RETURN          reduce using rule 26 (statment -> var_decl .)
    IF              reduce using rule 26 (statment -> var_decl .)
    WHILE           reduce using rule 26 (statment -> var_decl .)
    VARIABLE        reduce using rule 26 (statment -> var_decl .)
    MINUS           reduce using rule 26 (statment -> var_decl .)
    LPAREN          reduce using rule 26 (statment -> var_decl .)
    FLOAT           reduce using rule 26 (statment -> var_decl .)
    INT             reduce using rule 26 (statment -> var_decl .)
    STRING          reduce using rule 26 (statment -> var_decl .)
    TRUE            reduce using rule 26 (statment -> var_decl .)
